--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "elliptic": "^6.5.1",
     "got": "^9.6.0",
     "gsap": "^2.1.3",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "loadash": "^1.0.0",
     "localstoragedb": "^2.3.2",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.19",
     "md5": "^2.2.1",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.14.1",
     "onsenui": "^2.10.10",
     "pouchdb": "^7.1.1",
     "qs": "^6.9.0",
@@ -57,6 +57,8 @@
     "@vue/cli-service": "^3.11.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^5.0.0",
     "vue-cli-plugin-cordova": "^2.3.6",
     "vue-template-compiler": "^2.6.10"
@@ -68,6 +70,7 @@
     },
     "extends": [
       "plugin:vue/essential",
+      "plugin:prettier/recommended",
       "eslint:recommended"
     ],
     "rules": {},
